--- a/PublicService/Dockerfile
+++ b/PublicService/Dockerfile
@@ -4,7 +4,7 @@ ENV APP_HOME /app
 RUN mkdir $APP_HOME
 WORKDIR $APP_HOME
 
-COPY pom.xml $APP_HOME/pom.xml
+COPY ../pom.xml $APP_HOME/pom.xml
 COPY mvnw $APP_HOME/mvnw
 COPY src $APP_HOME/src
 COPY lib $APP_HOME/lib
