--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: "3.9"
 
 services:
-  web:
-    build: .
-    working_dir: /app
+  public_service:
+    build: ..
+    working_dir: /PublicService/app
     ports:
       - "8090:8090"
       - "5005:5005"
