--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 	<description>Demo project for Spring Boot </description>
 	<modules>
 		<module>EurekaServer</module>
+		<module>CloudGateway</module>
 		<module>PublicService</module>
 		<module>EmailService</module>
 	</modules>
