--- a/EmailService/src/main/resources/application.yml
+++ b/EmailService/src/main/resources/application.yml
@@ -1,21 +1,12 @@
 spring:
   application:
     name: EmailService
-  jpa:
-    database: POSTGRESQL
-    show-sql: true
-    hibernate:
-      ddl-auto: none
-  datasource:
-    url: jdbc:postgresql://localhost:5432/challenge
-    username: postgres
-    password: password
-    driverClassName: org.postgresql.Driver
-  flyway:
-    url: jdbc:postgresql://localhost:5432/challenge
-    user: postgres
-    password: password
-    baseline-description: true
+  rabbitmq:
+    host: localhost
+    port: 5672
+    stream:
+      username: guest
+      password: guest
 server:
   port: 0
 eureka:
@@ -24,3 +15,6 @@ eureka:
       defaultZone: http://localhost:8761/eureka
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+mq:
+  queue:
+    send-email: send-email
