--- a/EurekaServer/src/main/resources/application.yml
+++ b/EurekaServer/src/main/resources/application.yml
@@ -3,7 +3,10 @@ spring:
     name: EurekaServer
 server:
   port: 8761
+
 eureka:
   client:
-    allow-redirects: false
+    register-with-eureka: false
     fetch-registry: false
+  server:
+    renewal-percent-threshold: 0.85
