--- a/SubscriptionService/pom.xml
+++ b/SubscriptionService/pom.xml
@@ -7,7 +7,7 @@
 		<artifactId>challenge</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>publicservice</artifactId>
+	<artifactId>subscriptionservice</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Public Service</name>
 	<description>Demo project for Spring Boot</description>
