--- a/SubscriptionService/src/main/resources/application.yml
+++ b/SubscriptionService/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: publicservice
+    name: subscriptionservice
   jpa:
     database: POSTGRESQL
     show-sql: true
@@ -30,6 +30,7 @@ eureka:
       defaultZone: http://localhost:8761/eureka
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+    hostname: localhost
 mq:
   queue:
     send-email: send-email
