docker compose configuration

--- a/SubscriptionService/Dockerfile
+++ b/SubscriptionService/Dockerfile
@@ -1,13 +1,21 @@
+FROM maven:3.8.3-jdk-11  as build
+
+ENV APP_HOME /app
+RUN mkdir $APP_HOME
+WORKDIR $APP_HOME
+COPY . .
+
+RUN mvn clean package -DskipTests
+
 FROM maven:3.8.3-jdk-11
 
 ENV APP_HOME /app
 RUN mkdir $APP_HOME
 WORKDIR $APP_HOME
 
-COPY ../pom.xml $APP_HOME/pom.xml
-COPY mvnw $APP_HOME/mvnw
-COPY src $APP_HOME/src
-COPY lib $APP_HOME/lib
-RUN mkdir logs
+ARG RABBITMQ_SERVER=rabbitmq
+ARG EUREKA_SERVER=eurekaserver
 
-RUN mvn clean package
+COPY ./target/*.jar ./app.jar
+EXPOSE 8761
+ENTRYPOINT java -jar app.jar
