--- a/EurekaServer/pom.xml
+++ b/EurekaServer/pom.xml
@@ -6,6 +6,7 @@
         <groupId>com.teapayment</groupId>
         <artifactId>challenge</artifactId>
         <version>0.0.1-SNAPSHOT</version>
+        <relativePath/>
     </parent>
     <artifactId>EurekaServer</artifactId>
     <version>0.0.1-SNAPSHOT</version>
@@ -42,6 +43,14 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </exclude>
+                    </excludes>
+                </configuration>
             </plugin>
         </plugins>
     </build>
