--- a/EurekaServer/src/main/resources/application.yml
+++ b/EurekaServer/src/main/resources/application.yml
@@ -8,3 +8,10 @@ eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
+  instance:
+    secure-port: 443
+    secure-port-enabled: true
+    non-secure-port: 80
+    non-secure-port-enabled: false
+    hostname: eurekaserver
+    namespace: eurekaserver
