--- a/SubscriptionService/src/main/resources/application.yml
+++ b/SubscriptionService/src/main/resources/application.yml
@@ -30,7 +30,7 @@ eureka:
       defaultZone: http://eurekaserver:8761/eureka
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
-    hostname: eurekaserver
+    hostname: subscriptionservice
 mq:
   queue:
     send-email: send-email
